# tuto-fastapi-myumbrella

./: .gitignore  README.md  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.dockerfile  devcontainer.json  p10k.zsh  zshrc
src/myumbrella/: __init__.py  app.py  core.py  dependencies.py  main.py  openweather.py
src/myumbrella/routers/: __init__.py  default.py  umbrella.py
tests/e2e/: __init__.py  test_main.py
tests/unit/: test_app.py  test_core.py  test_openweather.py
